tests/cases/parser/patterns/pat_match_missing_semi.hash
// run=fail, stage=parse

other_func := (t: str) => {
    match t {
        "one" => 1;
        "two" => 2;
        "three" => 3;
        "four" | "five" if var => 4.5;
        alpha if var == 2 => {
            print(alpha)
        };
        _ => -1
    };

    return alpha;
};
